# eBPFDexDumper-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_EN.md  SECURITY.md  bpf.c  build.rs  build_android.sh  header.h
.github/workflows/: ci.yml  release.yml
assets/: rock5b-5.10-arm64_min.btf
bpf/: bpf.c  header.h
docs/: README.md  README_EN.md
headers/: def.h
scripts/: package-release.sh
src/: art.rs  dex.rs  dump.rs  fix.rs  lib.rs  main.rs  platform.rs  shutdown.rs
vmlinux/arm64/: vmlinux.h
