[package]
name = "ebpf-dex-dumper-rs"
version = "0.1.0"
edition = "2021"
description = "Android eBPF DEX dumper and repair utilities"
license = "GPL-3.0-or-later"

[[bin]]
name = "eBPFDexDumper"
path = "src/main.rs"

[dependencies]
adler2 = "2.0.1"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "string"] }
goblin = { version = "0.10.5", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
hex = "0.4.3"
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1 = "0.10.6"
thiserror = "2.0.12"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
aya = "0.13.1"
object = { version = "0.36.7", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.25.0"
